[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.65"
neon = { path="../neon/crates/neon", default-features=false, features=["napi-latest","proc-macros","napi-runtime","promise-api","napi-runtime"]}
